--- a/QuarterViewStageMaker/QuarterViewStageMaker/StageCanvas.xaml
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/StageCanvas.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:QuarterViewStageMaker"
              mc:Ignorable="d" 
-             Background="Aquamarine"
+             Background="Aquamarine" BorderBrush="Black" BorderThickness="1"
              Loaded="StageCanvas_Loaded">
     <Grid>
         <Canvas x:Name="Canvas" Width="Auto" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White" 
