--- a/QuarterViewStageMaker/QuarterViewStageMaker/MainWindow.xaml
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:QuarterViewStageMaker"
         xmlns:ewt="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1000" Loaded="Window_Loaded">
+        Title="MainWindow" Height="800" Width="1000" 
+        Loaded="Window_Loaded" Closing="Window_Closing">
     <Window.CommandBindings>
         <CommandBinding Command="New" Executed="CreateStage"/>
         <CommandBinding Command="Save" Executed="SaveStage"/>
@@ -171,7 +172,7 @@
                             <Button x:Name="DeleteOneStepButton" Content="一段消す" Width="50" Margin="10,5,0,0"
                                     Click="DeleteOneStepButton_Click"/>
                         </StackPanel>
-                        <Button x:Name="SmoothSquaresButton"  Content="平均化する" 
+                        <Button x:Name="SmoothSquaresButton"  Content="高さを揃える" 
                                 VerticalAlignment="Top" Margin="10,5,0,0"
                                 Click="SmoothSquaresButton_Click"/>
                         <Button x:Name="DeleteAllSquaresButton" Content="すべて削除する"
