--- a/QuarterViewStageMaker/QuarterViewStageMaker/NewProjectWindow.xaml
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/NewProjectWindow.xaml
@@ -5,14 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuarterViewStageMaker"
         mc:Ignorable="d"
-        Title="NewProjectWindow" Height="245.531" Width="636.383" Closing="Window_Closing">
+        Title="NewProjectWindow" Height="267.976" Width="636.383" Closing="Window_Closing">
     <Grid Margin="0,0,0,0">
         <Label Content="プロジェクト名" HorizontalAlignment="Left" Margin="10,52,0,0" VerticalContentAlignment="Center" VerticalAlignment="Top" Width="135" FontSize="18"/>
         <Label Content="プロジェクトフォルダ" HorizontalAlignment="Left" Margin="10,88,0,0" VerticalContentAlignment="Center" VerticalAlignment="Top" Width="158" FontSize="18"/>
         <TextBox x:Name="ProjectNameBox" Text="{Binding Path=ProjectName.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="173,52,0,0" TextWrapping="Wrap" BorderThickness="2" VerticalAlignment="Top" Width="130" FontSize="18"/>
-        <TextBox x:Name="RootFolderBox" Text="{Binding Path=RootFolder.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="173,91,0,0" TextWrapping="Wrap" BorderThickness="2" VerticalAlignment="Top" Width="282" FontSize="18"/>
+        <TextBox x:Name="RootFolderBox" Text="{Binding Path=RootFolder.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="173,91,0,0" TextWrapping="NoWrap" BorderThickness="2" VerticalAlignment="Top" Width="282" Height="28" FontSize="18" />
         <Label x:Name="ProjectNameLabel" Content="{Binding Path=ProjectName.Value, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, NotifyOnSourceUpdated=True}" HorizontalAlignment="Left" Margin="465,91,0,0" VerticalAlignment="Top" Width="130" FontSize="18"/>
         <Label Content="\" HorizontalAlignment="Left" Margin="453,91,0,0" VerticalAlignment="Top" Width="19" FontSize="18" RenderTransformOrigin="-0.737,0.56"/>
-        <Button x:Name="SubmitButton" Content="プロジェクト作成" HorizontalAlignment="Left" Margin="445,149,0,0" VerticalAlignment="Top" Width="150" Height="40" FontSize="18" Click="SubmitButton_Click"/>
+        <Button x:Name="SubmitButton" Content="プロジェクト作成" HorizontalAlignment="Left" Margin="453,181,0,0" VerticalAlignment="Top" Width="150" Height="40" FontSize="18" Click="SubmitButton_Click"/>
+        <Button x:Name="BrowseButton" Content="参照" HorizontalAlignment="Left" Height="24" Margin="380,125,0,0" VerticalAlignment="Top" Width="75" Click="BrowseButton_Click"/>
     </Grid>
 </Window>
