--- a/QuarterViewStageMaker/QuarterViewStageMaker/MainWindow.xaml
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/MainWindow.xaml
@@ -235,7 +235,7 @@
 
             <ScrollViewer Grid.Column="2" Grid.Row="2" Width="Auto" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gray">
                 <local:StageCanvas x:Name="StageCanvas" Width="Auto" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                   local:StageCanvas.Edited="StageCanvas_Edited" local:StageCanvas.SquareSelected="StageCanvas_SquareSelected" />
+                                   local:StageCanvas.Edited="StageCanvas_Edited" local:StageCanvas.SquareSelected="StageCanvas_SquareSelected" local:StageCanvas.SelectedMaptipChanged="StageCanvas_SelectedMaptipChanged"/>
             </ScrollViewer>
 
             <StackPanel Grid.Row="0" Grid.Column="4" Grid.RowSpan="3" Width="Auto" Height="Auto" Orientation="Vertical"
