--- a/QuarterViewStageMaker/QuarterViewStageMaker/MainWindow.xaml
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/MainWindow.xaml
@@ -18,6 +18,7 @@
     <Window.InputBindings>
         <KeyBinding Command="Undo" Key="Z"/>
         <KeyBinding Command="Redo" Key="Y"/>
+        <KeyBinding Command="Save" Key="S"/>
     </Window.InputBindings>
     <StackPanel Orientation="Vertical">
         <Menu x:Name="Menu" Grid.ColumnSpan="4" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Top" Height="Auto" Width="Auto">
@@ -47,12 +48,14 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Row="0" Grid.Column="1">
+            <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1">
+                    <Button x:Name="OpenEditMapObjectWindowButton" Content="マップオブジェクトを編集する" Width="150" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10" Click="OpenEditMapObjectWindowButton_Click"/>
+                <Label x:Name="DebugLabel" FontSize="14" Margin="10,5,0,0"/>
             </StackPanel>
 
             <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" Height="Auto" Margin="0,0,0,0" 
                         Grid.Row="1" Grid.RowSpan="1" 
-                        VerticalAlignment="Stretch" Width="Auto">
+                        VerticalAlignment="Stretch" Width="Auto" Grid.ColumnSpan="1">
                 <StackPanel Orientation="Horizontal">
                     <Border BorderThickness="1" BorderBrush="Black"
                             Width="34" Height="34"
@@ -87,7 +90,7 @@
                 </StackPanel>
             </StackPanel>
 
-            <StackPanel Grid.Row="2" Grid.Column="1" >
+            <StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" >
                 <Label x:Name="MaptipListLabel" Content="マップチップ一覧" Width="223" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Bottom" FontFamily="Meiryo UI" FontSize="16"/>
                 <ScrollViewer x:Name="MaptipListViewer" Width="233" Height="440" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="1">
                     <Canvas x:Name="MaptipListCanvas" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FFBBAAAA" />
@@ -175,7 +178,7 @@
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <StackPanel Orientation="Vertical">
-                            <Label Content="選択中のマスを" Margin="10,0,0,0"
+                        <Label Content="選択中のマスを" Margin="10,0,0,0"
                                    VerticalContentAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Vertical">
@@ -236,7 +239,7 @@
                         </StackPanel>
                     </StackPanel>
                     <StackPanel Orientation="Vertical">
-                        
+
                     </StackPanel>
                 </StackPanel>
             </StackPanel>
