--- a/QuarterViewStageMaker/QuarterViewStageMaker/EditMapObjectWindow.xaml
+++ b/QuarterViewStageMaker/QuarterViewStageMaker/EditMapObjectWindow.xaml
@@ -7,6 +7,16 @@
         xmlns:ewt="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="EditMapObjectWindow" Height="800" Width="1250" Loaded="Window_Loaded" Closing="Window_Closing">
+    <Window.CommandBindings>
+        <CommandBinding Command="Save" Executed="SaveStage"/>
+        <CommandBinding Command="Undo" Executed="Undo"/>
+        <CommandBinding Command="Redo" Executed="Redo"/>
+    </Window.CommandBindings>
+    <Window.InputBindings>
+        <KeyBinding Command="Undo" Modifiers="Ctrl" Key="Z"/>
+        <KeyBinding Command="Redo" Modifiers="Ctrl" Key="Y"/>
+        <KeyBinding Command="Save" Modifiers="Ctrl" Key="S"/>
+    </Window.InputBindings>
     <StackPanel Orientation="Vertical">
         <Menu>
             <MenuItem Header="Project">
@@ -64,17 +74,46 @@
                 <StackPanel Orientation="Horizontal">
                     <Label Content="Tag" Width="50" Height="30" FontSize="16"
                            HorizontalAlignment="Left" Margin="4,0,0,0"/>
-                    <ewt:MaskedTextBox x:Name="SelectedFigureImageTagBox" Width="50" Height="24" Text="1.0" Mask="0.0"
+                    <TextBox x:Name="SelectedFigureImageTagBox" Width="50" Height="24" Text=""
                                        VerticalAlignment="Bottom" Margin="0,0,0,2"
                                        VerticalContentAlignment="Center" FontSize="16" MaxLines="1"
                                        TextChanged="FigureSetting_Changed"/>
                 </StackPanel>
             </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="2">
+                <StackPanel Orientation="Horizontal">
+                    <Label Content="ステージ編集" Width="100" Height="36" FontSize="18"
+                           HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0"/>
+                    <Button x:Name="UndoButton" Content="戻る" Width="50" Height="20" FontSize="12" IsEnabled="False"
+                            HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,7"
+                            Click="Undo"/>
+                    <Button x:Name="RedoButton" Content="進む" Width="50" Height="20" FontSize="12" IsEnabled="False"
+                            HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5,0,0,7"
+                            VerticalContentAlignment="Center"
+                            Click="Redo"/>
+                    <Button x:Name="SaveStageButton" Content="保存する" Width="80" Height="24" FontSize="16" IsEnabled="False"
+                            HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15,0,0,5"
+                            Click="SaveStage"/>
+                    <CheckBox x:Name="ReverseCheckBox" Content="反転する" Width="100" Height="24" FontSize="18"
+                                 HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,5"
+                                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
+                                 Checked="ReverseCheckBox_CheckedChanged" Unchecked="ReverseCheckBox_CheckedChanged"/>
+                    <Label Content="倍率" FontSize="18" Height="30"
+                           HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,5"/>
+                    <ewt:DoubleUpDown x:Name="MagnificationUpDown" Width="50" Height="28" Minimum="0.01" Maximum="10" Value="1" FontSize="18"
+                                      HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="0,0,0,6"/>
+                    <Button x:Name="MagnificationDecideButton" Content="適用" Width="40" Height="20"
+                            VerticalAlignment="Bottom" Margin="5,0,0,8"
+                            VerticalContentAlignment="Center" Padding="0"
+                            Click="MagnificationDecideButton_Click"/>
+                </StackPanel>
+            </StackPanel>
+
             <ScrollViewer Grid.Column="2" Grid.Row="2" Width="Auto" Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Background="Gray">
                 <local:MapObjectEditCanvas x:Name="MapObjectEditCanvas"/>
             </ScrollViewer>
             <StackPanel Grid.Row="0" Grid.Column="4" Grid.RowSpan="3">
-                <local:MapObjectSettingPanel x:Name="MapObjectSettingPanel"/>
+                <local:MapObjectSettingPanel x:Name="MapObjectSettingPanel" local:MapObjectSettingPanel.MapObjectSettingChanged="MapObjectSettingPanel_MapObjectSettingChanged"/>
             </StackPanel>
         </Grid>
     </StackPanel>
